--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "capstone project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./src/index.js",
+    "test": "jest"
   },
   "author": "Vincent Angelo A. Flores",
   "license": "ISC",
