--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "eslint": "^8.23.1",
+    "eslint-plugin-jest": "^27.0.4",
     "jest": "^29.0.3",
     "nodemon": "^2.0.19"
   }
