--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "env": {
         "commonjs": true,
         "es2021": true,
-        "node": true
+        "node": true,
+        "jest/globals": true
     },
     "extends": "eslint:recommended",
     "overrides": [
@@ -27,7 +28,7 @@
         "semi": [
             "error",
             "always"
-        ],
-        "plugins": ["jest"]
-    }
+        ]
+    },
+    "plugins": ["jest"]
 }
