--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./src/index.js",
-    "test": "jest"
+    "test": "jest --watchAll"
   },
   "author": "Vincent Angelo A. Flores",
   "license": "ISC",
